<resources>
    <string name="app_name">Tweather</string>
    <string name="current_temperature">Current temperature</string>
    <string name="temperature">%1$.3f °C / %2$.3f °F</string>
    <string name="wind_speed">Wind speed</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="cloudiness_percentage">%1$.2f %%</string>
    <string name="cloudy_or_not">cloudy_or_not</string>
    <string name="see_five_days_temperature">See five days temperature deviation</string>
    <string name="see_deviation">The deviation of temperatures in next five days is : %1$.3f</string>

</resources>
